[tool.poetry]
name = "hitfactorpy"
version = "0.0.1"
description = ""
authors = ["Conor Heine <conor.heine@gmail.com>"]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
typer = {version = "^0.7.0", extras = ["all"]}
httpx = {version = "^0.23.3", extras = ["http2"]}
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
tox = "^4.2.4"
mypy = "^0.991"
autoflake = "^2.0.0"
pytest-cov = "^4.0.0"
deptry = "^0.7.1"
coverage = "^7.0.5"
codecov = "^2.1.12"
pandas-stubs = "^1.5.2.230105"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
markdown-include = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 120
target_version = ['py310']
include = '\.pyi?$'
ignore_missing_imports = ['jinja2']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | build
  )/
)
'''

[tool.isort]
profile = "black"
src_paths = ["tests"]
known_first_party = ["hitfactorpy"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["hitfactorpy"]
